apps/news-alert/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-alert
  namespace: default
  labels:
    app.kubernetes.io/name: news-alert
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: news-alert
  template:
    metadata:
      labels:
        app.kubernetes.io/name: news-alert
    spec:
      imagePullSecrets:
        - name: regcred
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node.kubernetes.io/server-usage
                    operator: DoesNotExist
      containers:
        - name: news-alert
          image: margarinas/news-alert:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /up
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /up
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 192Mi
            limits:
              cpu: 750m
              memory: 512Mi
